syntax = "proto3";
package persistence;

option go_package = "github.com/pokt-network/pocket/persistence/types";

message PersistenceConfig {
  string postgres_url = 1;
  string node_schema = 2;
  string block_store_path = 3;
  string tx_indexer_path = 4;
  string trees_store_dir = 5;
  int32 max_conns_count = 6;
  int32 min_conns_count = 7;
  uint64 max_conn_lifetime_hour = 8;
  uint64 max_conn_idle_time_minute = 9;
  uint64 health_check_period_minute = 10;
}