syntax = "proto3";

package configs;

option go_package = "github.com/pokt-network/pocket/runtime/configs";

message RPCConfig {
  bool enabled = 1;
  string port = 2;
  uint64 timeout = 3;
  bool use_cors = 4;
}
